...
        }}
      />
      <Tabs.Screen
        name="campaigns"
        options={{
          title: 'Campagnes',
          tabBarButtonTestID: 'tab-campagnes',
          tabBarIcon: dsIcon('map'),
        }}
      />
    </Tabs>
  );
}
...
